--- a/apps/settings.ini
+++ b/apps/settings.ini
@@ -5,6 +5,7 @@ DEBUG_CONSOLE = False
 INSTALLED_APPS = [
     'uliweb.contrib.staticfiles',
     'uliweb.contrib.orm',
+    'uliweb.contrib.flashmessage',
     'uliweb.contrib.auth',
     'plugs.ui.bootstrap',
     'plugs.ui.bootheme',
@@ -12,6 +13,7 @@ INSTALLED_APPS = [
     'plugs.ui.jquery.jquery',
     'admin',
     'cms',
+    'apply',
     ]
 
 [EXPOSES]
@@ -23,3 +25,7 @@ require_login = 'uliweb.contrib.auth.require_login'
     
 [DECORATORS]
 require_login = 'uliweb.contrib.auth.require_login'
+
+[MODELS]
+course = 'apply.models.course'
+Apply = 'apply.models.Apply'
