--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: cPython
 pages:
-    - 关于我们: index.md
-    - 安装python: install_python.md
+    - 关于本站: index.md
+    - 开始: start.md
 theme: readthedocs
