增加字符串

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,5 +3,5 @@ pages:
     - 关于本站: index.md
     - 开始: start.md
     - 变量: variables.md
-    - 变量: string.md
+    - 字符串: string.md
 theme: readthedocs
