--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,4 +4,16 @@ pages:
     - 开始: start.md
     - 变量: variables.md
     - 字符串: string.md
+    - 列表: list.md
+    - range: range.md
+    - For: for.md
+    - If:if.md
+    - 切片／slice:slice.md
+    - dict:dict.md
+    - 函数:functions.md
+    - 模块:module.md
+    - 类:class.md
+    - 随机数:rand.md
+    - 正则: re.md
+
 theme: readthedocs
