--- a/requests_notes/mkdocs.yml
+++ b/requests_notes/mkdocs.yml
@@ -4,6 +4,7 @@ pages:
     - 初始化: __init__.py.md
     - 版本信息: __version__.py.md
     - API: api.py.md
+    - http 密码验证: auth.py.md
 theme:
   name: 'material'
 markdown_extensions:
